Move ./deps/gumbo-parser into ./deps
This allows `clib-install(1)` to properly install this package.

--- a/package.json
+++ b/package.json
@@ -13,36 +13,37 @@
 
     "deps/list.c",
     "deps/list.h",
-    "deps/node.c",
+    "deps/list_node.c",
+    "deps/list_iterator.c",
 
     "deps/substr.c",
     "deps/substr.h",
 
-    "deps/gumbo-parser/attribute.c",
-    "deps/gumbo-parser/attribute.h",
-    "deps/gumbo-parser/char_ref.c",
-    "deps/gumbo-parser/char_ref.h",
-    "deps/gumbo-parser/error.c",
-    "deps/gumbo-parser/error.h",
-    "deps/gumbo-parser/gumbo.h",
-    "deps/gumbo-parser/insertion_mode.h",
-    "deps/gumbo-parser/parser.c",
-    "deps/gumbo-parser/parser.h",
-    "deps/gumbo-parser/string_buffer.c",
-    "deps/gumbo-parser/string_buffer.h",
-    "deps/gumbo-parser/string_piece.c",
-    "deps/gumbo-parser/string_piece.h",
-    "deps/gumbo-parser/tag.c",
-    "deps/gumbo-parser/token_type.h",
-    "deps/gumbo-parser/tokenizer.c",
-    "deps/gumbo-parser/tokenizer.h",
-    "deps/gumbo-parser/tokenizer_states.h",
-    "deps/gumbo-parser/utf8.c",
-    "deps/gumbo-parser/utf8.h",
-    "deps/gumbo-parser/util.c",
-    "deps/gumbo-parser/util.h",
-    "deps/gumbo-parser/vector.c",
-    "deps/gumbo-parser/vector.h"
+    "deps/attribute.c",
+    "deps/attribute.h",
+    "deps/char_ref.c",
+    "deps/char_ref.h",
+    "deps/error.c",
+    "deps/error.h",
+    "deps/gumbo.h",
+    "deps/insertion_mode.h",
+    "deps/parser.c",
+    "deps/parser.h",
+    "deps/string_buffer.c",
+    "deps/string_buffer.h",
+    "deps/string_piece.c",
+    "deps/string_piece.h",
+    "deps/tag.c",
+    "deps/token_type.h",
+    "deps/tokenizer.c",
+    "deps/tokenizer.h",
+    "deps/tokenizer_states.h",
+    "deps/utf8.c",
+    "deps/utf8.h",
+    "deps/util.c",
+    "deps/util.h",
+    "deps/vector.c",
+    "deps/vector.h"
 
   ],
   "dependencies": {
