Use str_copy instead of strdup
Since strdup is not standardized in ANSI C, use str_copy instead.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "thlorenz/gumbo-parser.c": "*",
     "stephenmathieson/substr.c": "*",
+    "stephenmathieson/str-copy.c": "*",
     "stephenmathieson/http-get.c": "*",
     "clibs/list": "*"
   }
