Fix category parsing
We're now scraping text from the `<h2 />`, rather than using the anchor's
name attribute.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "stephenmathieson/substr.c": "*",
     "stephenmathieson/str-copy.c": "*",
     "stephenmathieson/http-get.c": "*",
+    "stephenmathieson/case.c": "*",
+    "stephenmathieson/trim.c": "*",
     "clibs/list": "*"
   }
 }
