--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wiki-registry",
   "version": "0.0.4",
-  "repo": "stephenmathieson/wiki-registry.c",
+  "repo": "clibswiki-registry.c",
   "description": "Turn a GitHub Wiki page into a package registry",
   "keywords": [ "registry", "github", "wiki" ],
   "license": "MIT",
