--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,5 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Install clib
+        run: |
+          sudo apt-get update
+          sudo apt-get install libcurl4-gnutls-dev valgrind -qq
+          git clone https://github.com/clibs/clib.git /tmp/clib
+          sudo make -C /tmp/clib install
+      - run: clib install
       - run: make example
       - run: ./example
